--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                 <div id="mainPages" class="tab-pane active">
                     <h3>Основные страницы сайта</h3>
                     <div class="export-buttons">
-                        <button onclick="exportMainCSV()">📥 CSV основных страниц</button>
-                        <button onclick="exportFullData()">📊 Полные данные (JSON)</button>
+                        <button onclick="exportMainCSV()">📥 Базовый CSV</button>
+                        <button onclick="exportDetailedCSV()">📊 Детальный CSV</button>
+                        <button onclick="exportFullData()">🔮 Полные данные (JSON)</button>
                     </div>
                     <div class="urls-table" id="mainPagesTable"></div>
                 </div>
